Closed Bug 1627643 Opened 6 years ago Closed 5 years ago

searching the page with Ctrl+F can not find value of inputs

Categories

(Core :: Find Backend, defect)

74 Branch
defect
Not set
normal

Tracking

()

RESOLVED FIXED
mozilla77
Tracking Status
firefox77 --- fixed

People

(Reporter: forum4, Assigned: emilio)

References

(Regressed 1 open bug)

Details

Attachments

(1 file)

User Agent: Mozilla/5.0 (X11; Linux x86_64; rv:74.0) Gecko/20100101 Firefox/74.0

Steps to reproduce:

first of: AMAZING WORK U DO!

CONGRATULATIONS ALL INVOLVED!

LOVE FIREFOX AND WILL STAY LOYAL (plz don't sell our data X-D)

tested on: GNU Debian Linux 10 and Firefox 74.0.1 (64-bit)

when searching a page with Ctrl+F

it will not "find this text"

<input alt="Details zum Umsatz anzeigen" class="XAction Submitlink nowrap ImageButton" id="actAnzeigen::8::" name="action.php" src="test.php" title="Details" type="image"><input alt="Details" id="actAnzeigen8" name="action.php" tabindex="18" title="Details" type="submit" value="find this text">

is this normal or intended behaviour?

unfortunately some pages (online banking) are using those fields to display sender of payments.

so when on the overview of all payments user is unable to Ctrl+F search for the sender.

Actual results:

text is not found

Expected results:

the text should be found and highlighted by firefox

Bugbug thinks this bug should belong to this component, but please revert this change in case of error.

Component: Untriaged → WebPayments UI
Component: WebPayments UI → Untriaged

Hi!

Thanks for your feedback, it's appreciated!

Can you please mention the pages in which you're encoutering issues searching text through Ctrl + F? (or are they all home banking pages?)

Also, is it any text within the page? Or something specific? Like "Details zum Umsatz anzeigen" as provided in the bug's description ("Show sales details") So I can try to replicate on my end.

I will move this over to a component so developers can take a look over it. If is not the correct component please feel free to change it to an appropriate one.

Thanks for the report.

Best regards, Clara.

Component: Untriaged → Keyboard Navigation
Flags: needinfo?(forum4)
Component: Keyboard Navigation → Find Backend
Product: Firefox → Core

Thanks for fast answers.

Great fan of all Mozilla products and using them heavily and exclusively, also recommending them to others.

What like best is Mozilla's constant high quality software - fast security bug fixing - but be careful with the use of JavaScript in Firefox and Thunderbird - would disable JavaScript in Thunderbird per default or things like those could happen? https://dwaves.org/2018/11/16/xiaomi-nfc-and-baseband-exploit-confirmed-javascript-is-indeed-evil-also-on-phones/

back to topic: the page in question is an online banking, page of GLS Bank, transactions overview.

https://www.gls-online-filiale.de/banking-private/entry

so can not give my credentials X-D

but can give more details and even reproduce the "error" (it could be completely intended by Mozilla behavior of Firefox, namely, not to search for text labels of <input value="Name of Creditor")

it could be the error of GLS using it falsely or in a way that limits the functionality of an "overview" (an overview that can not be searched rather sucks X-D)

best regards & keep up the good stuff

<table rules="none" style="table-layout:auto; width:100%;" cellspacing="0" cellpadding="0" border="0"> <tbody><tr> <td valign="top"><span class="XAction Submitlink nowrap" id="actAnzeigen::0::"><input alt="Details zum Umsatz anzeigen" class="XAction Submitlink nowrap ImageButton" id="actAnzeigen::0::" name="action_XYZ.mainContent_root_cntUmsatzanzeige_cntVorgangsdaten_actAnzeigen::0::" src="target-url" title="Details zum Umsatz anzeigen" type="image"><input alt="Details zum Umsatz anzeigen" class="XAction Submitlink nowrap TextButton" id="actAnzeigen::0::" name="action_XYZ.mainContent_root_cntUmsatzanzeige_cntVorgangsdaten_actAnzeigen::0::" tabindex="10" title="Details zum Umsatz anzeigen" type="submit" value="Name of Creditor"></span></td> </tr> <tr> <td valign="top" align="left"><span class="XLabel Beschriftung nowrap" id="lblVorgangLabel::0::">Subject:</span></td> </tr> <tr> <td valign="top" align="left"><span class="XLabel" id="lblVorgangValue::0::">TransactionOrder</span></td> </tr> <tr> <td valign="top" align="left"><span class="XLabel" id="lblTransactionUsedFor1Value::0::">the payment was used for this and that</span></td> </tr> <tr> <td valign="top" align="left"><span class="XLabel" id="lblTransactionUsedFor2Value::0::">N: info</span></td> </tr> <tr> <td valign="top"> <table class="XTable XTableEmbeddedContainer nurDruckansicht" id="tblErweiterteTransactionUsedFore::0::" rules="none" cellspacing="0" cellpadding="0" border="0"> <colgroup> <col> </colgroup> <tbody> <tr> <td valign="top" height="1" align="left"><span class="XLabel" id="lblExtendedTransactionUsedFor::0::">ig, da Kleinbetragszahlung</span></td> </tr> <tr> <td valign="top" height="1" align="left"><span class="XLabel" id="lblExtendedTransactionUsedFor::0::">IBAN: 123123123123123</span></td> </tr> <tr> <td valign="top" height="1" align="left"><span class="XLabel" id="lblExtendedTransactionUsedFor::0::">0 BIC: J2HJ3F43L</span></td> </tr> </tbody> </table>

Flags: needinfo?(forum4)

also Mozilla is great at innovations.

just all privacy intruding innovations are not good advertisement X-D

So the first one is just that alt in that case is implemented as the ::before pseudo-element, and we don't allow finding content in ::before:

data:text/html,<style>div::before { content: "Find me"; }</style><div></div>

Seems like other browsers behave the same in that regard, but that seems a bit user-hostile, we should consider changing it.

The second one might be similar.

I can poke at fixing this.

Status: UNCONFIRMED → NEW
Ever confirmed: true

The priority flag is not set for this bug.
:mikedeboer, could you have a look please?

For more information, please visit auto_nag documentation.

Flags: needinfo?(mdeboer)
Flags: needinfo?(emilio)

The check for generated content in nsTextFrame is to the best of my
knowledge useless: We don't display generated content as selected when
the parent is selected anyhow, and the offsets would be wrong.

We special-case text inputs and textarea because of ::placeholder, see
the comment, but otherwise there's no reason you shouldn't be able to
find-in-page generated content / fallback / etc.

I added ForceBreakBetween so as to not create ranges that span across
shadow / anonymous content boundaries. They don't work anyway (see the
TODO in test_find.html), so it seems better to make that explicit until
we properly handle them (bug 1590379).

I added a pref just to be safe since this is long-standing behavior, but
I think it should be uncontroversial.

Assignee: nobody → emilio
Status: NEW → ASSIGNED
Flags: needinfo?(emilio)
Pushed by ealvarez@mozilla.com: https://hg.mozilla.org/integration/autoland/rev/1299909504c9 Allow to find and display selection native anonymous content. r=jfkthame
Status: ASSIGNED → RESOLVED
Closed: 5 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla77
Regressions: 1633828

thanks. hope this is beneficial behavior to others as well. looking forward to the update. :)

have a good time on this blue planet

useful/positive, not beneficial

Flags: needinfo?(mdeboer)
Regressions: 1650444
Depends on: 1653771
Depends on: 1654270
No longer depends on: 1653771
Regressions: 1653771
No longer depends on: 1654270
Regressions: 1654270
Regressions: 1692532
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: